# docs/swagger.json
@@ -37,6 +37,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.LoginResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -88,6 +94,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.RegisterResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -108,6 +120,12 @@
                 ],
                 "summary": "Healthcheck endpoint",
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HealthResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -128,6 +146,12 @@
                 ],
                 "summary": "Get Teams",
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetTeamsResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -148,6 +172,12 @@
                 ],
                 "summary": "Join Default Team",
                 "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.JoinTeamResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -177,6 +207,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetTagsResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -213,6 +249,12 @@
                     }
                 ],
                 "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateTagResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -258,6 +300,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateTagResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -292,6 +340,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.DeleteTagResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -328,6 +382,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetTagValuesResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -371,6 +431,12 @@
                     }
                 ],
                 "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateTagValueResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -414,6 +480,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.DeleteTagValueResponse"
+                        }
+                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -441,7 +513,7 @@
                     "type": "string"
                 },
                 "user_joined_at": {
-                    "$ref": "#/definitions/pgtype.Timestamp"
+                    "type": "string"
                 },
                 "user_role": {
                     "$ref": "#/definitions/db.TeamUserRole"
@@ -452,7 +524,7 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "$ref": "#/definitions/pgtype.Timestamp"
+                    "type": "string"
                 },
                 "data_type": {
                     "$ref": "#/definitions/db.TagDataType"
@@ -485,7 +557,7 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "$ref": "#/definitions/pgtype.Timestamp"
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
@@ -502,7 +574,7 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "$ref": "#/definitions/pgtype.Timestamp"
+                    "type": "string"
                 },
                 "domain": {
                     "type": "string"
@@ -599,7 +671,7 @@
             "properties": {
                 "message": {
                     "type": "string",
-                    "example": "Email is required field"
+                    "example": "Something went wrong"
                 }
             }
         },
@@ -715,35 +787,6 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/db.Tag"
-                }
-            }
-        },
-        "pgtype.InfinityModifier": {
-            "type": "integer",
-            "format": "int32",
-            "enum": [
-                1,
-                0,
-                -1
-            ],
-            "x-enum-varnames": [
-                "Infinity",
-                "Finite",
-                "NegativeInfinity"
-            ]
-        },
-        "pgtype.Timestamp": {
-            "type": "object",
-            "properties": {
-                "infinityModifier": {
-                    "$ref": "#/definitions/pgtype.InfinityModifier"
-                },
-                "time": {
-                    "description": "Time zone will be ignored when encoding to PostgreSQL.",
-                    "type": "string"
-                },
-                "valid": {
-                    "type": "boolean"
                 }
             }
         }
