# internal/handler/health_h.go
@@ -1,6 +1,8 @@
 package handler
 
 import (
+	"net/http"
+
 	"github.com/labstack/echo/v4"
 	"github.com/skndash96/lastnight-backend/internal/dto"
 )
@@ -15,11 +17,11 @@ func NewHealthHandler() *healthHandler {
 // @Tags Health
 // @Description Returns the health status of the application
 // @Produce json
-// @Success default {object} dto.HealthResponse
+// @Success 200 {object} dto.HealthResponse
 // @Failure default {object} dto.ErrorResponse
 // @Router /api/health [get]
 func (h *healthHandler) HealthCheck(c echo.Context) error {
-	c.JSON(200, &dto.HealthResponse{
+	c.JSON(http.StatusOK, &dto.HealthResponse{
 		Status: "ok",
 	})
 
